include(eslamTaskLib)
ADD_LIBRARY(${ESLAM_TASKLIB_NAME} SHARED 
    ${ESLAM_TASKLIB_SOURCES})


TARGET_LINK_LIBRARIES(${ESLAM_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${ESLAMVIZ_LIBRARIES}
    ${ESLAM_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${ESLAM_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${ESLAM_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${ESLAM_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${ESLAM_TASKLIB_HEADERS}
    DESTINATION include/orocos/eslam)

